Upgrade Java compiler source and target from 11 to 21